[package]
name = "stream-cv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
ffmpeg-next = "5.0.3"
opencv = { version = "0.63.1", features = ["clang-runtime", "rgb"]}
rayon = "1.5.2"
rgb = "0.8.32"
tokio = { version = "1.18.1", features = ["full"] }
flume = "0.10.12"
log = "0.4"
pretty_env_logger = "0.4"
