[package]
name = "stream-cv"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
ffmpeg-next = "5.0"
flume = "0.10"
futures = "0.3"
log = "0.4"
clap = { version = "3.1", features = ["derive"] }
opencv = { version = "0.64", features = ["clang-runtime", "rgb"]}
pretty_env_logger = "0.4"
rgb = "0.8"
tokio = { version = "1.18", features = ["full"] }
